20251116 testing margins on mobile view 8 - font-family issue

--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@
  margin:0;
  padding:0;
  box-sizing: border-box;
- /* font-family: Cambria, Georgia, serif; */
- font-family: "Segoe UI Emoji", "Apple Color Emoji", "Noto Color Emoji", "Twemoji Mozilla", "Segoe UI Symbol", "Noto Emoji", sans-serif;
+ font-family: Cambria, Georgia, serif;
+ /* font-family: "Segoe UI Emoji", "Apple Color Emoji", "Noto Color Emoji", "Twemoji Mozilla", "Segoe UI Symbol", "Noto Emoji", sans-serif; */
 
 }
 
